# BLE_SDK10_examples

./: .gitignore  LICENSE.txt  Readme.md
.github/scripts/: process_build.py
.github/workflows/: main.yml
connectivity/ble_custom_service_sample_code/: .cproject  .project  Readme.md  ble_custom_service.c  ble_custom_service.h  ble_peripheral_task.c  main.c  makefile.targets
connectivity/cpp_collector/: .cproject  .project  Readme.md  cpp_collector_task.c  cps_client.c  cps_client.h  main.c
connectivity/cpp_sensor/: .cproject  .project  Readme.md  cpp_sensor_task.c  main.c
connectivity/ibeacon/: .cproject  .project  Readme.md  main.c
connectivity/pc_custom_service_central/: .cproject  .project  Readme.md  ble_central_task.c  main.c
connectivity/pc_custom_service_periph/: .cproject  .project  Readme.md  ble_custom_service.c  ble_custom_service.h  ble_peripheral_task.c  main.c
connectivity/pxp_reporter_makefile/: .cproject  .project  README.md  README_suota.md  initial_flash.py  main.c  makefile.targets  mkimage.py  platform_devices.c  pxp_reporter_task.c  readme_soc.md  sw_version.h
connectivity/wechat_demo/: .cproject  .project  Readme.md  ble_profile_task.c  main.c
features/UART_XTAL_TRIM/: .cproject  .project  main.c  platform_devices.c  platform_devices.h
features/aes_hash_crypto/: .cproject  .project  Readme.md  (+2 more)
features/pxp_reporter_cmake/project/: CMakeLists.txt  main.c  platform_devices.c  pxp_reporter_task.c  sw_version.h
features/pxp_reporter_cmake/project/config/: custom_charging_profile.h  custom_socf_battery_profile.h  platform_devices.h  pxp_reporter_config.h  sdk_config.h
flash_driver/: Readme.md
(+935 files in other folders)
